<resources>
    <string name="app_name">dataHubApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home" translatable="false">Home</string>
    <string name="sharedTopics">Shared Topics</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="Topics">Topics</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="no_account_yet_create_one">Don\'t have an account? Create one!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account_login">Already have an account? Log in!</string>
    <string name="selected_registration">Selected registration</string>
    <string name="add_a_new_registration">add a new registration</string>
    <string name="ID" translatable="false">ID</string>
    <string name="Date">Date</string>
    <string name="topic_name">Topic_name</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="username" translatable="false">Username</string>
    <string name="change_password">Change Password</string>
    <string name="delete_topic">Delete Topic</string>
    <string name="change_topic_name">Change Topic Name</string>
    <string name="delete_registration">Delete Registration</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="app_version">App Version</string>
    <string name="version_name" translatable="false">v. 1.0.0</string>
    <string name="dipartimento_di_informatica_anno_2021_2022" translatable="false">Dipartimento di informatica - Anno 2021-2022</string>
    <string name="project_team" translatable="false">Naretto Gabriele, Scarpinati Livio e Kim Marco Viberti</string>
    <string name="taass_project" translatable="false">TAASS Project</string>
    <string name="search">Search</string>
    <string name="logoutGoogle" translatable="false">Logout Google</string>

</resources>