<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/topicsFragment"
        android:title="@string/Topics"
        android:icon="@drawable/ic_baseline_folder_24"
        />
    <item
        android:id="@+id/sharedTopicsFragment"
        android:title="@string/sharedTopics"
        android:icon="@drawable/ic_baseline_topics_shared_24"
    />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_account_box_24"
    />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
    />
</menu>