<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/themeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/light_theme"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/themeLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appVersionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themeSwitch" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appVersionLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/settingsFooterColor"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fromLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dipartimento_di_informatica_anno_2021_2022"
            android:textColor="@color/settingsFooterTextColor"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/iumLabel"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/iumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taass_project"
            android:textColor="@color/settingsFooterTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fromLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/namesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_team"
            android:textColor="@color/settingsFooterTextColor"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iumLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>